--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email:       jonathon.bel.melbourne@gmail.com
 author:      Jonathon Belotti
 description: "A striking black-white Jekyll theme."
 baseurl:     ""
-url:         "https://juniortheme.live/"
+url:         "http://sawanp813.github.io/"
 date_format: "%b %-d, %Y"
 
 # Google services
