--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 ## Site settings                    ##
 ######################################
 title:       Junior Theme
-email:       jonathon.bel.melbourne@gmail.com
-author:      Jonathon Belotti
-description: "A striking black-white Jekyll theme."
+email:       sawanp.813@gmail.com
+author:      Sawan Patel
+description: "Updates, personal projects & passions."
 baseurl:     ""
 url:         "http://sawanp813.github.io/"
 date_format: "%b %-d, %Y"
@@ -53,17 +53,17 @@ facebook_comments_number: 10
 ###################################
 ## Social icons                  ##
 ###################################
-github_username: thundergolfer
+github_username: sawanp813
 bitbucket_username:
 stackoverflow_id:
-twitter_username: jonobelotti_io
+twitter_username:
 skype_username:
 steam_nickname:
 google_plus_id:
-linkedin_username: jonathonbelotti
+linkedin_username: sawanpatel813
 angellist_username:
-medium_id: thundergolfer
-youtube_channel_id: UCSP7fMKwmaXaZhViAV2Vgvg
+medium_id:
+youtube_channel_id:
 bitcoin_url:
 paypal_url:
 flattr_button:
@@ -73,15 +73,15 @@ flattr_button:
 ###################################
 show_sharing_icons: True
 # Change to 'true' to enable individual icons
-share_facebook: True
-share_twitter: True
-share_googleplus: True
-share_linkedin: false
+share_facebook: False
+share_twitter: False
+share_googleplus: False
+share_linkedin: True
 share_digg: false
 share_tumblr: false
-share_reddit: True
+share_reddit: False
 share_stumbleupon: false
-share_hackernews: True
+share_hackernews: False
 
 text:
   pagination:
