--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ######################################
 ## Site settings                    ##
 ######################################
-title:       Junior Theme
+title:       Sawan Patel
 email:       sawanp.813@gmail.com
 author:      Sawan Patel
 description: "Updates, personal projects & passions."
